@@ -32,7 +32,7 @@ The mailing list address is (no subscription required to post):
 Source Repository
 -----------------
 
-  <http://anonscm.debian.org/gitweb/?p=dpkg/dpkg.git>
+  <https://anonscm.debian.org/gitweb/?p=dpkg/dpkg.git>
   <git://anonscm.debian.org/dpkg/dpkg.git>
 
 
