@@ -64,7 +64,7 @@ TODO
    - Check dpkg-divert strings for new and fixable ones.
    - Standardize translated error messages in the perl code to avoid useless
      work for translators.
-   - Check http://d-i.alioth.debian.org/spellcheck/level5/index.html
+   - Check https://d-i.alioth.debian.org/spellcheck/level5/index.html
 
  * Discuss and implement
    http://www.hadrons.org/~guillem/debian/docs/origin.proposal
