@@ -50,7 +50,7 @@ this vendor derives from.
 .SH EXAMPLE
 .nf
 Vendor: Debian
-Vendor\-URL: http://www.debian.org/
+Vendor\-URL: https://www.debian.org/
 Bugs: debbugs://bugs.debian.org
 .fi
 .SH SEE ALSO
