@@ -201,7 +201,7 @@ install again. In most cases, the problems will disappear or be solved.
 If problems persist or the installation performed was incorrect, please
 investigate into the causes and circumstances, and file a bug in the
 Debian bug tracking system. Instructions on how to do this can be found
-at http://bugs.debian.org/ or by reading the documentation
+at https://bugs.debian.org/ or by reading the documentation
 for \fBbug\fP(1) or \fBreportbug\fP(1), if these are installed.
 .sp
 Details of the install action depend on the access method's implementation.
