@@ -1,3 +1,3 @@
 Vendor: Debian
-Vendor-URL: http://www.debian.org/
+Vendor-URL: https://www.debian.org/
 Bugs: debbugs://bugs.debian.org
