@@ -1,6 +1,9 @@
 dpkg (1.17.11) UNRELEASED; urgency=low
 
-  *
+  [ Guillem Jover ]
+  * Switch URLs in docs and code comments from http:// to https:// if the
+    latter is available (round two). This includes the quilt patch header
+    templates, and examples in man pages.
 
   [ Updated programs translations ]
   * Danish (Joe Dalton). Closes: #754127
